This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

04/02/2006
SPoG
- Added Radiant Manual shortcut to win32 installation.
- Added 'use alternative texture projection' option to prefs.
- Fixed caching bug causing import-map to not reload modified maps.
- Added blended-decal rendering for doom3 and quake4.

30/01/2006
SPoG
- Added expand-selection-to-entities with default shortcut ctrl+alt+e.
- Fixed crash in gtk file-chooser with some versions of GTK+.

29/01/2006
SPoG
- Changed create-group-entity to re-select brushes after creation.

26/01/2006
SPoG
- Changed far-clip-plane setting to increase exponentially with distance.
- Fixed selected entities moving when drag-resizing brushes.
- Changed patches to be selectable from the back in wireframe views.
- Speed improvements for transform-selection code.

25/01/2006
SPoG
- Added default-texture-scale option to preferences.
- Added default-grid-spacing option to preferences.

23/01/2006
Shamus
- Fixed editing of doom3/quake4 faces with negative texture scale factors.

22/01/2006
SPoG
- Fixed shortcut for toggle-far-clip.
- Fixed broken link in 1.5 user docs.

10/01/2006
SPoG
- Changed script parser to ignore comments that start in the middle of tokens.
- Added support for editor_int/editor_string keys in doom3 entity definitions.
- Changed doom3/quake4 .mtr and .guide searching to look in subfolders.
- Added experimental support for doom3/quake4 projected lights.

20/12/2005
SPoG
- Added support for quake4 .guide material templates.
- Fixed GCC4 compile errors with anonymous enums.
- Added light_radius and light_center GUI to doom3 entity inspector.

10/12/2005
SPoG
- Added support for loading and saving Quake4 map format.
- Added support for built-in shader images such as _noFalloff.
- Added experimental code to render projected lights.
- Added support for loading quake4 entity definitions.